--- a/AssetManagementApp.csproj
+++ b/AssetManagementApp.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
-    <ProjectReference Include="AssetManagement.Shared\AssetManagement.Shared.csproj" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" /> 
+    <ProjectReference Include="AssetManagement.Shared\AssetManagement.Shared.csproj" ExcludeAssets="contentfiles" />
   </ItemGroup>
 
   <PropertyGroup>
