App client side ready

--- a/AssetManagement.Server/AssetManagement.Server.csproj
+++ b/AssetManagement.Server/AssetManagement.Server.csproj
@@ -4,11 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile> 
   </PropertyGroup>
+  
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -16,7 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AssetManagement.Data\AssetManagement.Data.csproj" />
+    <ProjectReference Include="..\AssetManagementApp.csproj" />
     <ProjectReference Include="..\AssetManagement.Shared\AssetManagement.Shared.csproj" />
+    <ProjectReference Include="..\AssetManagement.Data\AssetManagement.Data.csproj" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
   </ItemGroup>
+
 </Project>
