--- a/AssetManagementApp.csproj
+++ b/AssetManagementApp.csproj
@@ -1,16 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" /> 
-    <ProjectReference Include="AssetManagement.Shared\AssetManagement.Shared.csproj" ExcludeAssets="contentfiles" />
-  </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="AssetManagement.Shared\AssetManagement.Shared.csproj" />
+
+    <Compile Remove="AssetManagement.Server\**" />
+    <Content Remove="AssetManagement.Server\**" />
+    <EmbeddedResource Remove="AssetManagement.Server\**" />
+    <None Remove="AssetManagement.Server\**" />
+    
+    <Compile Remove="AssetManagement.Data\**" />
+    <Content Remove="AssetManagement.Data\**" />
+    <EmbeddedResource Remove="AssetManagement.Data\**" />
+    <None Remove="AssetManagement.Data\**" />
+
+    <Compile Remove="AssetManagement.Shared\**" />
+    <Content Remove="AssetManagement.Shared\**" />
+    <EmbeddedResource Remove="AssetManagement.Shared\**" />
+    <None Remove="AssetManagement.Shared\**" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" /> 
+  </ItemGroup>
 
 </Project>
