--- a/AssetManagement.Server/appsettings.json
+++ b/AssetManagement.Server/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AssetManagementDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
