--- a/AssetManagement.Server/AssetManagement.Server.csproj
+++ b/AssetManagement.Server/AssetManagement.Server.csproj
@@ -8,23 +8,31 @@
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile> 
   </PropertyGroup>
   
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.18" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+
+    <!-- EF Core all aligned to 8.0.4 -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+
+    <!-- Required for IdentityDbContext -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AssetManagementApp.csproj" />
     <ProjectReference Include="..\AssetManagement.Shared\AssetManagement.Shared.csproj" />
     <ProjectReference Include="..\AssetManagement.Data\AssetManagement.Data.csproj" />
-
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
