--- a/AssetManagement.Server/appsettings.json
+++ b/AssetManagement.Server/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+  "Secret": "ThisIsMySuperSecureAssetManagementJWTSecretKey32Bits",
+  "Issuer": "YourApp",
+  "Audience": "YourAppUsers"
+},
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
