--- a/AssetManagement.Server/appsettings.json
+++ b/AssetManagement.Server/appsettings.json
@@ -10,6 +10,11 @@
   "Issuer": "YourApp",
   "Audience": "YourAppUsers"
 },
+"AdminCredentials": {
+    "Username": "admin",
+    "Password": "password123"
+  }
+,
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
